--- a/web-gl-tutorial/index.html
+++ b/web-gl-tutorial/index.html
@@ -3,7 +3,10 @@
   <head>
     <title>WebGL Demo</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../webgl.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
+    <script src="index.js"></script>
   </head>
-
+  <body>
+      <canvas id="glCanvas" width="640" height="480"></canvas>
+  </body>
 </html>
